--- a/templates/backoffice-client-secret.yml
+++ b/templates/backoffice-client-secret.yml
@@ -4,5 +4,5 @@ metadata:
   name: {{ include "backoffice-client.fullname" . }}-secrets
 data:
    REACT_APP_GOOGLE_MAPS_API_KEY: {{ .Values.secrets.googleKey | b64enc }}
-   tst : {{ .Values.secrets.dev }}
+   tst : {{ .Values.secrets.dev | b64enc }}
 type: Opaque
